--- a/package.json
+++ b/package.json
@@ -26,17 +26,23 @@
     "@coreui/react": "^5.5.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
+    "@hookform/resolvers": "^5.0.1",
     "@popperjs/core": "^2.11.8",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.9",
     "classnames": "^2.5.1",
     "core-js": "^3.40.0",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "redux": "5.0.1",
-    "simplebar-react": "^3.3.0"
+    "simplebar-react": "^3.3.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
