--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   },
   "dependencies": {
     "@coreui/chartjs": "^4.1.0",
-    "@coreui/coreui": "^5.3.1",
+    "@coreui/coreui": "^5.4.0",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.3.0",
-    "@coreui/react": "^5.5.0",
+    "@coreui/react": "^5.7.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@hookform/resolvers": "^5.0.1",
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "classnames": "^2.5.1",
     "core-js": "^3.40.0",
@@ -38,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-leaflet": "^5.0.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "redux": "5.0.1",
